base/tools/kube-prometheus-stack/manifests/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong
      sectionName: proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
          kind: Service
